Build/K8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buddy2go-server
  namespace: buddy2go
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: buddy2go-server

  template:
    metadata:
      labels:
        app: buddy2go-server

    spec:
      restartPolicy: Always

      containers:
      - name: server
        image: buddy2go-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001

        startupProbe:
          exec:
            command: ["sh", "-c", "nc -zv mysql 3306"]
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health/live
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
